2022-10-05T16:56:07Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3191166891
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 341 533 / 360 562
* notice: next accum: outdated-unq outdated-all / unq all: 341 533 / 361 563
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-05]

2022-10-05T08:32:46Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3188396447
* notice: last 14d: unq all: 3 29
* notice: prev accum: outdated-unq outdated-all / unq all: 341 533 / 360 563
* notice: next accum: outdated-unq outdated-all / unq all: 341 533 / 360 562
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-21]

2022-10-04T16:41:39Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3183893187
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 340 532 / 359 560
* notice: next accum: outdated-unq outdated-all / unq all: 341 533 / 360 563
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [2022-09-20] / [2022-10-04]

2022-10-04T02:20:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3178930492
* notice: last 14d: unq all: 2 28
* notice: prev accum: outdated-unq outdated-all / unq all: 338 530 / 358 559
* notice: next accum: outdated-unq outdated-all / unq all: 340 532 / 359 560
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-19] / []

2022-10-03T08:35:18Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172725249