@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-05T16:56:07Z",
-  "count_outdated" : 533,
-  "uniques_outdated" : 341,
-  "count" : 563,
-  "uniques" : 361,
+  "timestamp" : "2022-10-06T02:11:50Z",
+  "count_outdated" : 535,
+  "uniques_outdated" : 342,
+  "count" : 565,
+  "uniques" : 362,
   "clones" : [
-    {
-      "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 3,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
