@@ -1,12 +1,7 @@
 {
   "count": 30,
-  "uniques": 3,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-09-22T00:00:00Z",
       "count": 3,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-10-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
