@@ -1,3 +1,11 @@
+2022-10-06T02:11:50Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3194032348
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 341 533 / 361 563
+* notice: next accum: outdated-unq outdated-all / unq all: 342 535 / 362 565
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2022-09-21] / [2022-10-05]
+
 2022-10-05T16:56:07Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3191166891
 * notice: last 14d: unq all: 3 30
